--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- main css  -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- minify css  -->
+    <link rel="stylesheet" href="./css/min.main.css">
     <title>Coffe-Roaster</title>
 </head>
 <body>
