--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <a href="" class="navbar__link">Home</a>
                         </li>
                         <li class="navbar__item">
-                            <a href="" class="navbar__link">About us</a>
+                            <a href="./about.html" class="navbar__link">About us</a>
                         </li>
                         <li class="navbar__item">
                             <a href="" class="navbar__link">Create your plan</a>
@@ -175,10 +175,10 @@
                                 </a>
                                 <ul class="footer-list">
                                     <li class="footer-item">
-                                        <a class="footer-item-link" href="#">HOME</a>
+                                        <a class="footer-item-link" href="./">HOME</a>
                                     </li>
                                     <li class="footer-item">
-                                        <a class="footer-item-link" href="#">ABOUT US</a>
+                                        <a class="footer-item-link" href="./about.html">ABOUT US</a>
                                     </li>
                                     <li class="footer-item">
                                         <a class="footer-item-link" href="#">Create your plan</a>
